引导页完成

--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -6,7 +6,13 @@
   background-repeat: no-repeat;
 }
 .iconSearch {
-    width: 18px;
-    height: 18px;
-    background-image: url(../images/icon/Search.png);
+  width: 18px;
+  height: 18px;
+  background-image: url(../images/icon/Search.png);
+}
+.iconBack {
+  width: 6px;
+  height: 9px;
+  margin-right: 6px;
+  background-image: url(../images/icon/back.png);
 }
