--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -23,10 +23,11 @@ time, mark, audio, video, input{
   vertical-align: baseline;
 }
 body,html{
-  font:14/1.5 "PingFang SC", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+  font-family: "PingFang SC", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
   color: #000;
+  font-size: 14px;
 }
 body {
   background: #EBEBEB;
