--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -16,3 +16,13 @@
   margin-right: 6px;
   background-image: url(../images/icon/back.png);
 }
+.iconMover {
+  width: 24px;
+  height: 13px;
+  background-image: url(../images/icon/mover.png);
+}
+.iconTo {
+  width: 7px;
+  height: 11px;
+  background-image: url(../images/icon/to.png);
+}
