--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -26,3 +26,8 @@
   height: 11px;
   background-image: url(../images/icon/to.png);
 }
+.iconClose {
+  width: 13px;
+  height: 13px;
+  background-image: url(../images/icon/close.png);
+}
