--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -26,6 +26,11 @@
   height: 11px;
   background-image: url(../images/icon/to.png);
 }
+.iconTo1 {
+  width: 7px;
+  height: 11px;
+  background-image: url(../images/icon/to1.png);
+}
 .iconClose {
   width: 13px;
   height: 13px;
