--- a/src/assets/style/bg.scss
+++ b/src/assets/style/bg.scss
@@ -9,3 +9,7 @@
     background: url(../images/guide/guideBg.jpg) no-repeat 50% 50%;
     background-size:cover;
 }
+.signBg {
+    background: url(../images/new/logosign.png) no-repeat 10% center;
+    background-size: 24%;
+}
