--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -21,6 +21,11 @@
   height: 13px;
   background-image: url(../images/icon/mover.png);
 }
+.iconMover1 {
+  width: 67px;
+  height: 16px;
+  background-image: url(../images/icon/mover1.png);
+}
 .iconTo {
   width: 7px;
   height: 11px;
