--- a/src/assets/style/bg.scss
+++ b/src/assets/style/bg.scss
@@ -13,6 +13,10 @@
     background: url(../images/new/logosign.png) no-repeat 10% center;
     background-size: 24%;
 }
+.signBgTwo {
+    background: url(../images/new/logosign.png) no-repeat 10% center;
+    background-size: 24%;
+}
 .leftBtn {
     width: 32px;
     height: 32px;
