--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -41,3 +41,8 @@
   height: 13px;
   background-image: url(../images/icon/close.png);
 }
+.iconDel {
+  width: 17px;
+  height: 17px;
+  background-image: url(../images/icon/del.png);
+}
