--- a/src/assets/style/bg.scss
+++ b/src/assets/style/bg.scss
@@ -32,3 +32,7 @@
     background-size: 100%;
     cursor: pointer;
 }
+.productListHeard {
+    background: url(../images/home/bg.png) no-repeat 50% 50%;
+    background-size: cover
+}
