--- a/src/assets/style/bg.scss
+++ b/src/assets/style/bg.scss
@@ -34,5 +34,9 @@
 }
 .productListHeard {
     background: url(../images/home/bg.png) no-repeat 50% 50%;
-    background-size: cover
+    background-size: cover;
+}
+.othercoreHeard {
+    background: url(../images/home/bg.png) no-repeat 50% 50%;
+    background-size: cover;
 }
