--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -10,6 +10,11 @@
   height: 18px;
   background-image: url(../images/icon/Search.png);
 }
+.iconSearch1 {
+  width: 19px;
+  height: 19px;
+  background-image: url(../images/icon/Search1.png);
+}
 .iconBack {
   width: 6px;
   height: 9px;
