--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -23,7 +23,7 @@ time, mark, audio, video, input{
   vertical-align: baseline;
 }
 body,html{
-  font-family: "PingFang SC", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+  font-family: "PingFang SC";
   user-select: none;
   -webkit-tap-highlight-color: transparent;
   color: #000;
