--- a/src/assets/style/bg.scss
+++ b/src/assets/style/bg.scss
@@ -36,6 +36,10 @@
     background: url(../images/home/bg.png) no-repeat 50% 50%;
     background-size: cover;
 }
+.coreHeard {
+    background: url(../images/home/bg.png) no-repeat 50% 50%;
+    background-size: cover;
+}
 .othercoreHeard {
     background: url(../images/home/bg.png) no-repeat 50% 50%;
     background-size: cover;
