--- a/src/assets/style/bg.scss
+++ b/src/assets/style/bg.scss
@@ -2,7 +2,7 @@
 .logo {
     width: 360px;
     height: 72px;
-    background: url(../images/guide/logo.jpg) no-repeat 50% 50%;
+    background: url(../images/guide/logo.png) no-repeat 50% 50%;
     background-size: 100%;
 }
 .bootBg {
