--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -23,7 +23,7 @@ time, mark, audio, video, input{
   vertical-align: baseline;
 }
 body,html{
-  font-family: "PingFang SC";
+  font-family:Arial, "PingFang SC","Microsoft YaHei", "NotoSansCJKSC";
   user-select: none;
   -webkit-tap-highlight-color: transparent;
   color: #000;
