--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -41,6 +41,11 @@ footer, header, menu, nav, section{
   
 img {
   max-width: 100%;
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
 }
 body{
   line-height: 1
